tests/ui/resolve/getters_complex.stderr
error: getter must return at least one value
  --> ROOT/tests/ui/resolve/getters_complex.sol:LL:CC
   |
LL |     mapping(uint256 => B) public mapB;
   |     ^^^^^^^^^^^^^^^^^^^-^^^^^^^^^^^^^^
   |                        |
   |                        the struct has all its members omitted, therefore the getter cannot return any values

error: aborting due to 1 previous error

